--- a/index.html
+++ b/index.html
@@ -79,19 +79,13 @@
                         </div>
                     </div>
                 </div>
-              <!--  <div class="about-image">
-                    <div class="image-frame">
-                        <svg viewBox="0 0 300 300" class="about-svg">
-                            <rect x="50" y="50" width="200" height="200" fill="none" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="150" cy="120" r="30" fill="none" stroke="currentColor" stroke-width="2"/>
-                            <path d="M100 200 Q150 220 200 200" fill="none" stroke="currentColor" stroke-width="2"/>
-                        </svg>
-                    </div>
-                </div> -->
+                <div class="about-image">
+                    <img src="./assets/octocat.png" alt="About Me Photo" />
+                </div>
             </div>
         </div>
     </section>
-
+    
     <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
