onek kaj korechi ebr khawa

--- a/public/index.html
+++ b/public/index.html
@@ -85,8 +85,31 @@
             </div>
         </div>
     </section>
+   
+    <div id="skills-container"></div>
+
+    <!-- skill and experinece-->
+    <section class="experience-section">
+        <div class="container">
+            <div class="section-header">
+                <h1 class="section-title">Experience</h1>
+                <div class="title-underline"></div>
+                <p class="section-subtitle">My journey in Artificial Intelligence & Machine Learning</p>
+            </div>
     
-    <!-- Skills Section -->
+            <div class="timeline" id="timeline">
+                <!-- Timeline items will be dynamically loaded from JSON -->
+            </div>
+    
+            <div class="skills-summary">
+                <h3 class="skills-title">Core Competencies</h3>
+                <div class="skills-grid" id="skills-grid">
+                    <!-- Skills will be dynamically loaded from JSON -->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Skills Section 
     <section id="skills" class="skills">
         <div class="container">
             <h2 class="section-title">Skills & Expertise</h2>
@@ -142,7 +165,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
