--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#skills" class="nav-link">Skills</a></li>
+                <li><a href="#skill" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -89,7 +89,7 @@
     <div id="skills-container"></div>
 
     <!-- skill and experinece-->
-    <section class="experience-section">
+    <section id="skill" class="experience-section">
         <div class="container">
             <div class="section-header">
                 <h1 class="section-title">Experience</h1>
